--- a/scratch.html
+++ b/scratch.html
@@ -11,11 +11,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Custom CSS -->
+  <!-- CSS -->
   <link href="scratch.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- Navbar -->
+  
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-3 shadow-sm">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Kyler Hite</a>
